improvements to headings no longer uer uses nbsp coz breaks on mac and bad practise

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,24 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Fjalla+One');
 
 body {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
-    padding: 50px 50px 0px 50px;
+    padding: 50px 50px 50px 50px;
     position: relative;
     overflow-y: scroll;
-
-    /* background-image: url("https://i.imgur.com/iAqA5iL.png");  */
 }
 h1, h2 {
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Fjalla One', sans-serif;  
     font-size: 5em;
+    line-height: 1.35em;
 }
 h1 span {
     text-transform: uppercase;
     background-color: rgba(58, 192, 58, 0.4);
-}
-h3 {
-    font-size: 2em;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    padding: 0 20px;
 }
 ul {
     list-style-type: none;
@@ -27,11 +26,9 @@ ul {
     overflow: hidden;
     /* background-color: #333; */
 }
-
 li {
     float: right;
 }
-
 li a {
     display: block;
     color: black;
@@ -39,25 +36,19 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
 }
-
 li a:hover:not(.active) {
     background-color: rgba(58, 192, 58, 0.4);
 }
-
 .active {
     background-color: #4CAF50;
 }
-
 a.button {
     display: inline-block;
-    /* position: relative; */
-    /* float: left; */
     width: 170px;
     padding: 20px;
     margin: 10px 20px 10px 0;
     font-weight: 600;
     text-align: center;
-    /* line-height: 50px; */
     color: #FFF;
     border-radius: 5px;
     transition: all 0.2s ;
@@ -68,12 +59,13 @@ a.button:hover {
     background: #21825B;
 }
 .full_page {
-    height: calc(100% - 90px);
+    height: 800px;
     /* min-height: 700px; */
     padding-left: 90px;
     padding-right: 90px;
     display: flex;
     align-items: center; 
+    width: 850px;
 } 
 .centered_page {
     text-align: center;
@@ -81,9 +73,9 @@ a.button:hover {
     margin: 0 auto;
 }
 .centered_page img {
-    max-width: 250px;
-    min-width: 200px;
-    max-height: 250px;
+    /* max-width: 250px; */
+    /* min-width: 200px; */
+    max-height: 170px;
     vertical-align: middle;
     margin: auto 20px;
 }
@@ -103,16 +95,16 @@ a.button:hover {
     z-index: -1;
 }
 .right_element img {
-    height: 70%;
-    /* width: 500px;
-    height: 500px;  */
+    height: 600px;
 }
 .contact {
     text-decoration: underline;
     text-align: right;
 }
-.blurb_homepage {
-    width: 600px;
+.blurb {
+    font-size: 1.6em;
+    margin: 50px auto;
+    /* width: 600px; */
 }
 .quote {
     font-size: 3em;
